# mandelbrot

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bmp.h  color.h  complex.h  embedfile.c  main.c  math.h  util.h  vulkan.h
res/shader/: default.frag  default.vert  ortho_tex.frag  ortho_tex.vert
shaders/: frag.spv  shader.frag
shaders/colored/: compile_shaders.bat  frag.spv  shader.frag  vert.spv
shaders/textured/: shader.vert  vert.spv
src/: color.c  color.h  complex.c  complex.h  main.c  mandelbrot.c  nmmath.c  nmmath.h  util.h  vulkan.h
src/system/: input.c  input.h  opengl.c  opengl.h  ortho_renderer.c  ortho_renderer.h  orto_model.c  orto_model.h  shader_manager.c  shader_manager.h  texture_manager.c  texture_manager.c.old  texture_manager.h  texture_manager.h.old  window.c  window.h
src/util/: color.c  color.h  complex.c  complex.h  counted_list.c  counted_list.h  log.c  log.h  mandelbrot.c  mandelbrot.h  nm_math.c  nm_math.h  util.c  util.h
